tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__TemperatureContr-AAAAAAAAAAAAAAAAAAAFug==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1466,
  "prerequisites": [
    1467
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Ambient Thermal Controller is an item for use in the Oxygen Sealer to provide thermal protection in sealed spaces.\n\nAn Ambient Thermal Controller is useful in the dimensions too cold or too hot for players to survive without Thermal Padding.\n\nIt can be placed in the 3rd slot next to the energy and oxygen slots in a working Oxygen Sealer. Once the Ambient Thermal Controller is in the sealer, it will heat or cool the output oxygen according to the local environment, and then the player can safely take the thermal padding off in the sealed room. Though there's absolutely no reason to do so.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Temperature Control",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1467
  ],
  "rewards": [],
  "tasks": []
}
