tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Tier3HeavyDutyPl-AAAAAAAAAAAAAAAAAAAFrQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1453,
  "prerequisites": [
    1446
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Rockets require heavy duty plates for the main hull. Let's craft 38 tier 3 heavy duty plates out of tier 2 plates and desh plates.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 3 Heavy Duty Plates",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1446
  ],
  "rewards": [],
  "tasks": []
}
